--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -12,6 +12,27 @@
 }
 @using (Html.BeginForm())
 {
+    string userType = "";
+    if (Session["UserType"] != null)
+    {
+        if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
+        {
+            userType = "Doctor";
+        }
+        else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
+        {
+            userType = "Patient";
+        }
+        else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
+        {
+            userType = "SuperAdmin";
+        }
+
+    }
+    else
+    {
+        userType = "NotLoggedIn";
+    }
     <div class="custom-central-div" style="margin-top:6%">
         <div class="row-fluid">
             <div>
@@ -63,11 +84,11 @@
                                 {
                                     if (Convert.ToBoolean(Model.IsDocConnectUser))
                                     {
-                                        <a class='pull-right btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])@Utilities.Encrypt(Convert.ToString(Model.UserId).Trim())&frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))")'>Book Appointment </a>
+                                        <a class='pull-right btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])@Utilities.Encrypt(Convert.ToString(Model.UserId).Trim())&frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))","@userType")'>Book Appointment </a>
                                     }
                                     if (Convert.ToBoolean(Model.IsDocConnectUser) == false)
                                     {
-                                        <a class="pull-right btn book_appt_button" onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))")' data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Book Appointment </a>
+                                        <a class="pull-right btn book_appt_button" onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))","@userType")' data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Book Appointment </a>
                                     }
                                 }
                             </div>
@@ -175,13 +196,13 @@
                             @if (Convert.ToBoolean(Model.IsDocConnectUser))
                             {
                                 <div class="span6 visible-phone">
-                                    <a class='pull-left btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])@Utilities.Encrypt(Convert.ToString(Model.UserId).Trim())&frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))")'>Book Appointment </a>
+                                    <a class='pull-left btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])@Utilities.Encrypt(Convert.ToString(Model.UserId).Trim())&frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))","@userType")'>Book Appointment </a>
                                 </div>
                             }
                             @if (Convert.ToBoolean(Model.IsDocConnectUser) == false)
                             {
                                 <div class="span6 visible-phone">
-                                    <a class="pull-left btn book_appt_button" onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))")' data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false" onclick="bookaptclicked()">Book Appointment </a>
+                                    <a class="pull-left btn book_appt_button" onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))","@userType")' data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Book Appointment </a>
                                 </div>
                             }
                         </div>
