added @section on Patient Master Layout Page and change tile to title

--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -119,7 +119,7 @@
             <meta name="description" content="@ViewBag.tag">
         }
     
-         @section tileTags {
+         @section titeTags {
             <title>Mirai Consult-@ViewBag.tag </title>
         }
         <script type="text/javascript" src="~/Content/js/utility.js"></script>
