change to title

--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -414,7 +414,7 @@
             <meta name="title" content="@(Model.FirstName + " " + Model.LastName)">
             <meta name="description" content="@(Model.FirstName + " " + Model.LastName)">
         }
-    @section titeTags {
+    @section titleTags {
             <title>Mirai Consult-doctor-@(Model.FirstName + " " + Model.LastName) </title>
     }
     
