--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -4,7 +4,7 @@
     @{
         if (HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("doctor") || Session["seoQuestionText"] != null || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("topics"))
         {
-            @RenderSection("titeTags", required: false)
+            @RenderSection("titleTags", required: false)
         }
         else
         {
