--- a/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
@@ -138,7 +138,7 @@
                     }
                 });
             });
-            function FindUseType() {
+            function FindUserType() {
                 var userType = '';
                 @if (Session["UserType"] != null)
                 {
@@ -160,7 +160,7 @@
                 return userType;
             }
             function btnSearchDoctor_Click(ClickEvent) {
-                var userType = FindUseType();
+                var userType = FindUserType();
                 var cityid = $('#city-select').val();
                 var locationid = ""
                 if ($('#locality-select').val() != null) {
