section meta tags added

--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -410,6 +410,13 @@
             </div>
         </div>
     </div>
+	 @section metatags {
+            <meta name="title" content="@(Model.FirstName + " " + Model.LastName)">
+            <meta name="description" content="@(Model.FirstName + " " + Model.LastName)">
+        }
+    @section titleTags {
+            <title>Mirai Consult-doctor-@(Model.FirstName + " " + Model.LastName) </title>
+    }
     <script src="~/Content/js/utility.js"></script>
     <script type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>
     <script type="text/javascript">
