--- a/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
@@ -114,7 +114,7 @@
                     for (var i = 0; i < response.length; i++) {
 
                         TextToAppend = TextToAppend + '<div class=\'ans_time_detail\'><p>' + response[i].Counts + '</p></div>' +
-                                    '<a href=\'answers/' + response[i].QuestionId + '\'>' +
+                                    '<a href=\'answers/' + response[i].SeoQuestionText + '\'>' +
                                         '<p id=\"questionText\" style="word-wrap: break-word;">' + response[i].QuestionText + '</p>' +
                                     '</a>' +
                                     '<hr class="hr_margin" style="margin-top:22px" />'
