--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -151,10 +151,10 @@
                                             <a href='#' onclick='shareOnFacebook("@HttpUtility.JavaScriptStringEncode(HttpUtility.HtmlEncode(Convert.ToString(item.QuestionText)))","@HttpUtility.JavaScriptStringEncode(HttpUtility.HtmlEncode(Convert.ToString(item.AnswerText)) )","@item.QuestionId","@ViewBag.AskmiraiUrl","@ViewBag.FacebookAppKey", "@userType")'>
                                                 <img title='Facebook' class='share_icons_width' src='~/Content/image/fb.png' alt='Facebook'>
                                             </a>
-                                            <a class='share_link-margin ' target='_blank' href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text=@ViewBag.AskmiraiUrl/answers/@item.QuestionId' onclick="ga('send', 'event', '@userType', 'Share On Twitter', @item.QuestionId)"><img title='Twitter' class='share_icons_width' src='~/Content/image/twitter.png' alt='Twitter'></a>
+                                            <a class='share_link-margin ' target='_blank' href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text=@ViewBag.AskmiraiUrl/answers/@item.seoQuestionText' onclick="ga('send', 'event', '@userType', 'Share On Twitter', @item.seoQuestionText)"><img title='Twitter' class='share_icons_width' src='~/Content/image/twitter.png' alt='Twitter'></a>
 
                                             <a class='share_link-margin ' href='mailto:?Subject=Mirai Consult has shared an answer with you &amp;Body= Q. @item.QuestionText %0D%0A  Ans.  @item.AnswerText'>
-                                                <img title='Email' class='share_icons_width' src='~/Content/image/mail.png' style="margin-right:10px;" alt='Email' onclick="ga('send', 'event', '@userType', 'Share On Email', @item.QuestionId)">
+                                                <img title='Email' class='share_icons_width' src='~/Content/image/mail.png' style="margin-right:10px;" alt='Email' onclick="ga('send', 'event', '@userType', 'Share On Email', @item.seoQuestionText)">
                                                 @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                                 {
                                                     bool isuserthanked;
@@ -289,10 +289,10 @@
     $(function () {
         var useType = '@uType';
         var questionText = '';
-        @if (Model != null)
+        @if (Model != null && Model.Count()>0)
         {
             @:questionText = "@Html.Raw(Model.FirstOrDefault().QuestionText)";
-                }
+        }
         ga('send', 'event', useType, 'Review Others Answers', questionText)
         slectedtag = $("select").val();
     });
