--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -81,7 +81,7 @@
                             {
                                 <div class='row-fluid'>
                                     <div class='span12 custom-green-container' style="display:table">
-                                        <a style="display:table-row" href='/answers/@Model.ToList()[i].QuestionId' onclick="googleAnalytics('@Model.ToList()[i].QuestionText');">
+                                        <a style="display:table-row" href='/answers/@Model.ToList()[i].QuestionTextSeo' onclick="googleAnalytics('@Model.ToList()[i].QuestionText');">
                                             <div class='question_text custom-middle'>@Html.Raw(Model.ToList()[i].QuestionText) </div>
                                         </a>
                                     </div>
