--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -562,7 +562,7 @@
                                     string society;
                                     if (Model.details != null)
                                     {
-                                        foreach (Model.doctordetails doctordetail in Model.details)
+                                        foreach (Model.DoctorsDetails doctordetail in Model.details)
                                         {
                                             doctordetailsid = doctordetail.DocDetailsId;
                                             certification = Convert.ToString(doctordetail.Certification);
