--- a/MiraiConsultMVC/Views/Home/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Home/AskDoctor.cshtml
@@ -20,23 +20,23 @@
                 <div class="row-fluid">
                     <div class=" span11 ">
                         <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion" onkeyup="Count(this)"
-                                  placeholder="Type your question here" rows="6" cols="15" maxlength="200" onkeypress="return isEnterPress(event, this);" style="width:100%"></textarea>
+                                  placeholder="Type your question here" rows="6" cols="15" maxlength="200" onkeypress="return isEnterPress(event, this);" style="width: 100%; border: 1px solid #cccccc !important; height: 75% !important"></textarea>
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span11" style="margin-top: 0 !important">
-                        <input class="btn thanx home-send-btn" onclick="sendQuestion()" type="button" name="usrname" value="Send" style="float: right; margin-right: 0%; margin-top: 0 !important">
+                        <input class="btn thanx home-send-btn" onclick="sendQuestion()" type="button" name="usrname" value="Send" style="float: left; margin-right: 0%; margin-top: 0 !important;" >
                     </div>
                 </div>
             </div>
             <div class="visible-phone">
-                <textarea class="input-block-level Questiontextarea questextarea div-askdoctor-padding textareadiv-margin" id="txtQuestion" onkeyup="Count(this)"
-                          placeholder="Type your question here" rows="3" cols="5" maxlength="200" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");' style="font-size: 14px; height: 43% !important;"></textarea>
+                <textarea class="input-block-level Questiontextarea questextarea div-askdoctor-padding" id="txtQuestion" onkeyup="Count(this)"
+                          placeholder="Type your question here" rows="3" cols="5" maxlength="200" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");' style="font-size: 14px; height: 75% !important;margin-top:0px !important;width:100% !important;border:1px solid #cccccc !important"></textarea>
 
                 <div class="row-fluid">
-                    <div class="span12 ">
-                        <div class=" center_align btnpadding-right">
-                            <input class="btn thanx home-send-btn" onclick="sendQuestion()" type="button" name="usrname" value="Send" style="float: right; margin-top: 0 !important">
+                    <div class="span12">
+                        <div class=" center_align btnpadding-right" style="float:left">
+                            <input class="btn thanx" onclick="sendQuestion()" type="button" name="usrname" value="Send" style="float: left; margin-top: 0 !important">
                         </div>
                     </div>
                 </div>
