On click of view more option in tag cloud page should be opened in new tab.

--- a/MiraiConsultMVC/Views/Home/TagCloud.cshtml
+++ b/MiraiConsultMVC/Views/Home/TagCloud.cshtml
@@ -28,7 +28,7 @@
                         {
                             <a target="_blank" style="color: #333333 !important;" href='@(t.NavigateUrl)' class='@(t.CssClass)' title='@(t.ToolTip + " " + t.TagWeight + " Answers")'>@t.Text</a>
                         }
-                        <a href="~/topics" class="tagAcnhor" style="color: #222324;font-size:14px">view more...</a>
+                        <a href="~/topics" class="tagAcnhor" style="color: #222324;font-size:14px" target="_blank">view more...</a>
                     </p>
                 </div>
             </div>
