Fixed issue of resposive for about me.

--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -393,17 +393,26 @@
                             </div>
                         </div>                      
                     </div>                   
-                     <div class="row-fluid">
-                        <div class="span2">
+                     <div class="row-fluid hidden-phone">
+                        <div class="span2 hidden-phone">
                         </div>
                         <div class="span9">
                             <div class="row">
-                                <div id="aboutMe" class="span5  doc-clinic-container doc-clinic-details cust-below-space-reduce">About Me:</div>
+                                <div id="aboutMe" class="span5  doc-clinic-container doc-clinic-details cust-below-space-reduce">ABOUT ME:</div>
                             </div>
                         </div>                  
                     </div>
+                     <div class="row-fluid visible-phone">
+                        <div class="row-fluid visible-phone">
+                            <div class="span6 visible-phone">
+                                <div id="ClinicName" class="span5 doc-clinic-details cust-below-space-reduce visible-phone">
+                                    ABOUT ME:
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row-fluid">
-                        <div class="span2">
+                        <div class="span2 hidden-phone">
                         </div>
                         <div class="span9">
                             <div class="row">
