--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -416,7 +416,7 @@
                         </div>
                         <div class="span9">
                             <div class="row">
-                                <div id="aboutMe" class="span5  doc-clinic-container cust-below-space-reduce">@Model.AboutMe</div>
+                                <div id="aboutMe" class="span12  doc-clinic-container cust-below-space-reduce">@Html.Raw(Model.AboutMe)</div>
                             </div>
                         </div> 
                     </div>
