--- a/MiraiConsultMVC/Views/Feed/DoctorFeed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/DoctorFeed.cshtml
@@ -106,10 +106,10 @@
                         "<div class='inner-count-likes pull-right' title='Thanked by patient'>" + response[indexcnt].thanxcount + "</div><div class='inner-count-endorse pull-right' title='Endorsed'> " + response[indexcnt].endorsecount + "</div><div></div></div></div><div class='row-fluid'>" +
                         "<div class='span1 hidden-phone'><div class='center_align'><div class='feedDocImage img'><img src=" + img + "></div></div></div><div class='feedDocImage img visible-phone'><img src=" + img + "></div><div class='span6 middle-size-padding'><div class='ans_time_detail'><a class='ans_time_detail' target='_blank' href='../doctor/"+response[indexcnt].name_seo+"'>Dr. " + response[indexcnt].answerreplyedby + "</a> </div><div class='title_text'>" + title + "</div></div></div><div class='row-fluid'>";
                         if (ansimg.length > 0) {
-                            template = template + "<div class='span5'><p class='ans_text' style='word-wrap: break-word;'>" + response[indexcnt].answertext + "</p></div><div class='span3'><div class=''><div class='feedAnsImage img'><img src=" + ansimg + "></div></div></div></div>";
+                            template = template + "<div class='span5'><p class='ans_text' style='word-wrap: break-word;'>" + response[indexcnt].answertext.replace(/(?:\r\n|\r|\n)/g, '<br />') + "</p></div><div class='span3'><div class=''><div class='feedAnsImage img'><img src=" + ansimg + "></div></div></div></div>";
                         }
                         else {
-                            template = template + "<div class='span11'><p class='ans_text' style='word-wrap: break-word;'>" + response[indexcnt].answertext + "</p></div>";
+                            template = template + "<div class='span11'><p class='ans_text' style='word-wrap: break-word;'>" + response[indexcnt].answertext.replace(/(?:\r\n|\r|\n)/g, '<br />') + "</p></div>";
                         }
                         var url = document.getElementById("AskmiraiUrl").value;
                         var FBappkey = document.getElementById("FacebookAppKey").value;
