Changes code according to return type of method and showed error message if answer is already given by  that doctor.

--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -134,6 +134,16 @@
                             </div>
                         </div>
                     }
+                    else if (ViewBag.lblErrorMessage == "You have already answered to this question.")
+                    {
+                        <div class="wrapper-bordered" id="ErrorMessagediv">
+                            <div class="row-fluid">
+                                <div class="span12 alert alert-error">
+                                    <label class="msg_font error_message_color">@ViewBag.lblErrorMessage</label>
+                                </div>
+                            </div>
+                        </div>
+                    }
                     else
                     {
                         QuestionDtlModel qd = new QuestionDtlModel();
